# sashstore

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
api/: urls.py  views.py
common/: views.py
orders/: forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py
products/: admin.py  context_processors.py  models.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_initial.py  0003_product_stripe_product_price_id.py  0004_alter_product_stripe_product_price_id.py
products/templates/products/: basket.html  index.html  products.html
store/: asgi.py  celery.py  db.sqlite3  manage.py  requirements.txt  settings.py  urls.py  wsgi.py
store/api/: urls.py  views.py
store/common/: views.py
store/orders/: admin.py  forms.py  models.py  urls.py  views.py
store/orders/migrations/: 0001_initial.py  0002_initial.py
store/products/: admin.py  context_processors.py  models.py  serializers.py  tests.py  urls.py  views.py
store/products/fixtures/: categorys copy.json  utf8_categorys.json
store/products/migrations/: 0001_initial.py  0002_alter_productcategory_options.py  0002_initial.py  0003_basket.py  0003_product_stripe_product_price_id.py  (+1 more)
store/store/: celery.py  settings.py  urls.py  wsgi.py
store/users/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
users/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_emailresetpassword.py  0003_delete_emailresetpassword.py
(+21 files in other folders)
